WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132194
REGRESSION(
r167799
): ASSERTION in parseGridTemplateShorthand in fast/css-grid-layout/grid-template-shorthand-get-set.html
https://bugs.webkit.org/show_bug.cgi?id=132194
Summary
REGRESSION(r167799): ASSERTION in parseGridTemplateShorthand in fast/css-grid...
Javier Fernandez
Reported
2014-04-25 07:04:21 PDT
The change introduced in
r167799
broke the Debug build because of an incorrect assertion. Im already working on a fix.
Attachments
Patch
(1.60 KB, patch)
2014-04-25 07:37 PDT
,
Javier Fernandez
no flags
Details
Formatted Diff
Diff
Patch
(5.02 KB, patch)
2014-04-25 13:29 PDT
,
Javier Fernandez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Javier Fernandez
Comment 1
2014-04-25 07:37:33 PDT
Created
attachment 230179
[details]
Patch
Andrei Bucur
Comment 2
2014-04-25 07:39:05 PDT
Comment on
attachment 230179
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2014-04-25 08:16:24 PDT
Comment on
attachment 230179
[details]
Patch Clearing flags on attachment: 230179 Committed
r167806
: <
http://trac.webkit.org/changeset/167806
>
WebKit Commit Bot
Comment 4
2014-04-25 08:16:27 PDT
All reviewed patches have been landed. Closing bug.
Tim Horton
Comment 5
2014-04-25 10:01:39 PDT
This is still failing in 167807:
http://build.webkit.org/results/Apple%20Mavericks%20Debug%20WK1%20(Tests)/r167807%20(4934)/results.html
Tim Horton
Comment 6
2014-04-25 10:04:18 PDT
Reopening.
Javier Fernandez
Comment 7
2014-04-25 10:09:25 PDT
(In reply to
comment #6
)
> Reopening.
I filed
bug #132197
but I can provide the patch here, no problem. I'm already working on it
Tim Horton
Comment 8
2014-04-25 10:12:07 PDT
(In reply to
comment #7
)
> (In reply to
comment #6
) > > Reopening. > > I filed
bug #132197
but I can provide the patch here, no problem. > I'm already working on it
Putting a little bit more information than "breaks debug tests" in the title might make them easier to find :D Thanks for fixing!
Alexey Proskuryakov
Comment 9
2014-04-25 10:28:10 PDT
***
Bug 132197
has been marked as a duplicate of this bug. ***
Tim Horton
Comment 10
2014-04-25 11:23:35 PDT
Skipped on debug in
http://trac.webkit.org/changeset/167812
Javier Fernandez
Comment 11
2014-04-25 13:29:27 PDT
Created
attachment 230195
[details]
Patch Fix for the Debug layout tests.
WebKit Commit Bot
Comment 12
2014-04-25 14:18:13 PDT
Comment on
attachment 230195
[details]
Patch Clearing flags on attachment: 230195 Committed
r167821
: <
http://trac.webkit.org/changeset/167821
>
WebKit Commit Bot
Comment 13
2014-04-25 14:18:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug