REGRESSION(r167799): Breaks debug build https://bugs.webkit.org/show_bug.cgi?id=132194

Patch by Javier Fernandez <jfernandez@igalia.com> on 2014-04-25
Reviewed by Andrei Bucur.

Fix the debug bots after r167799

No new tests, no new functionality.

* css/CSSParser.cpp:
(WebCore::CSSParser::parseGridTemplateShorthand):

Canonical link: https://commits.webkit.org/150219@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167806 268f45cc-cd09-0410-ab3c-d52691b4dbfc